<resources>
    <string name="app_name">升大學歷屆成績</string>
    <string name="open">開啟</string>
    <string name="close">關閉</string>
    <string name="search_chin">搜尋</string>
    <string name="search_prompt">輸入關鍵字以搜尋校系成績</string>
    <string name="designated_grade_text">指考分數</string>
    <string name="basic_grade_text">學測分數</string>
    <string name="unify_grade_text">統測分數</string>
    <string name="response_text">意見回饋</string>
    <string name="favorite_text">我的最愛</string>
    <string name="count_down_text">倒數計時</string>
    <string name="title_activity_designated_search">DesignatedSearchActivity</string>
    <string name="title_activity_basic_search">BasicSearchActivity</string>
    <string name="title_activity_unify_search">unifySearchActivity</string>

    <string name="ad_application_id">ca-app-pub-7439674685628581~8953103392</string>
    <string name="test_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="main_banner_ad_unit_id">ca-app-pub-7439674685628581/1300052076</string>
    <string name="search_banner_ad_unit_id">ca-app-pub-7439674685628581/2985825686</string>
    <string name="ad_interstitial_id">ca-app-pub-7439674685628581/9865520260</string>
    <string name="native_ad_id">ca-app-pub-7439674685628581/3173753909</string>
    <string name="add_widget">Add widget</string>
</resources>
